--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -4,6 +4,7 @@
 
 
 <link rel="import" href="../life-canvas-base/life-canvas-base.html">
+<link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
 
 <dom-module id="life-brush-editor">
   <template>
@@ -11,7 +12,8 @@
       <paper-toolbar>
         <div>Hello World!</div>
       </paper-toolbar>
-      <life-canvas-base></life-canvas-base>
+      <!-- <life-canvas-base></life-canvas-base> -->
+      <life-preview-canvas width="240" height="240" auto-play rle="15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!"></life-preview-canvas>
       <div class="fit">content fits 100% below the header</div>
     </paper-header-panel>
 
