--- a/src/life-preview-canvas/life-preview-canvas.html
+++ b/src/life-preview-canvas/life-preview-canvas.html
@@ -5,7 +5,7 @@
 <dom-module id="life-preview-canvas">
   <template>
     <!-- <canvas width$="[[width]]" height$="[[height]]">Your browser doesn't support html5 canvas.</canvas> -->
-    <life-canvas-base id="canvas" is-playing="[[autoPlay]]" width="[[width]]" height="[[height]]" mode="canvas"></life-canvas-base>
+    <life-canvas-base id="canvas" is-playing="[[autoPlay]]" width="[[width]]" height="[[height]]" mode="canvas" cell-size="2"></life-canvas-base>
   </template>
 
   <style>
