--- a/src/app-shell/app-shell.html
+++ b/src/app-shell/app-shell.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 
+<link rel="import" href="../life-app/life-app.html">
 
 <dom-module id="app-shell">
   <template>
