--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -27,6 +27,8 @@
 <link rel="import" href="../life-icon-toggle/life-icon-toggle.html">
 <link rel="import" href="../life-save-dialog/life-save-dialog.html">
 <link rel="import" href="../life-brush-editor/life-brush-editor.html">
+<link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
+<link rel="import" href="../life-canvas/life-canvas.html">
 
 
 <dom-module id="life-app">
@@ -129,8 +131,12 @@
         <div>
           <!-- <life-save-dialog id="infoViewDialog" title="{{app._selectedSave.name}}" image-src="[[app._selectedSave.dataUrl]]" share-url="[[app._selectedSave.shareUrl]]" on-title-change="_handleTitleChange"></life-save-dialog> -->
           <life-save-dialog id="infoViewDialog" target="{{app._selectedSave}}" on-title-change="_handleTitleChange"></life-save-dialog>
-          <life-canvas app="{{app}}"></life-canvas>
-          <life-brush-editor></life-brush-editor>
+          <life-canvas id="mainCanvas" app="{{app}}"></life-canvas>
+          <!-- <life-preview-canvas width="240" height="240" auto-play rle="2o3b2o4b2o4b2o3b2o3bo7b2ob$obo2bobo3bo6bo5bo3bo5bo2bo$bo6bo4bo4b2o2b2o5bo5bo2b$14bo15bo7b$31bo!"></life-preview-canvas>
+          <life-preview-canvas width="240" height="240" auto-play rle="18bo8b$17b3o7b$12b3o4b2o6b$11bo2b3o2bob2o4b$10bo3bobo2bobo5b$10bo4bobobobob2o2b$12bo4bobo3b2o2b$4o5bobo4bo3bob3o2b$o3b2obob3ob2o9b2ob$o5b2o5bo13b$bo2b2obo2bo2bob2o10b$7bobobobobobo5b4o$bo2b2obo2bo2bo2b2obob2o3bo$o5b2o3bobobo3b2o5bo$o3b2obob2o2bo2bo2bob2o2bob$4o5bobobobobobo7b$10b2obo2bo2bob2o2bob$13bo5b2o5bo$b2o9b2ob3obob2o3bo$2b3obo3bo4bobo5b4o$2b2o3bobo4bo12b$2b2obobobobo4bo10b$5bobo2bobo3bo10b$4b2obo2b3o2bo11b$6b2o4b3o12b$7b3o17b$8bo!"></life-preview-canvas>
+          <life-preview-canvas width="240" height="240" auto-play rle="15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!"></life-preview-canvas> -->
+
+          <life-brush-editor rle="[[app._selectedPattern.payload]]"></life-brush-editor>
 
           <nav>
             <paper-button id="togglecontroller" on-tap="_togglePlaying" toggles style="float: left;">Pause</paper-button>
@@ -141,11 +147,11 @@
         </div>
         <div style="clear: both;">
           <div>Use arrow key to increase numbers (you can't type number keys), or you'll get a crash. This bug may be fixed sooner or later.</div>
-          <paper-input label="Canvas width" value="{{app.gameManager.CANVAS_SIZE_X}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" disabled style="float:left; width: 45%; max-width: 400px; margin-right: 8px;"></paper-input>
-          <paper-input label="Canvas height" value="{{app.gameManager.CANVAS_SIZE_Y}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" disabled style="float:left; width: 45%; max-width: 400px;"></paper-input>
-          <paper-input label="Cell width" value="{{app.gameManager.CELL_LENGTH_X}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" style="float:left; width: 45%; max-width: 400px; margin-right: 8px;"></paper-input>
-          <paper-input label="Cell height" value="{{app.gameManager.CELL_LENGTH_Y}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" style="float:left; width: 45%; max-width: 400px;"></paper-input>
-          <paper-input label="Cell size" value="{{app.gameManager.CELL_SIZE}}" type="number" min="1" max="10" on-change="handleCellResize" on-keydown="handleCellResize" style="float:left; width: 45%; max-width: 400px;"></paper-input>
+          <!-- <paper-input label="Canvas width" value="{{app.gameManager.CANVAS_SIZE_X}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" disabled style="float:left; width: 45%; max-width: 400px; margin-right: 8px;"></paper-input>
+          <paper-input label="Canvas height" value="{{app.gameManager.CANVAS_SIZE_Y}}" type="number" max="3000" on-change="handleCanvasResize" on-keydown="handleCanvasResize" disabled style="float:left; width: 45%; max-width: 400px;"></paper-input> -->
+          <paper-input label="Cell width" value="{{app.width}}" type="number" max="3000" style="float:left; width: 45%; max-width: 400px; margin-right: 8px;"></paper-input>
+          <paper-input label="Cell height" value="{{app.height}}" type="number" max="3000" style="float:left; width: 45%; max-width: 400px;"></paper-input>
+          <paper-input label="Cell size" value="{{app.cellSize}}" type="number" min="1" max="10" style="float:left; width: 45%; max-width: 400px;"></paper-input>
           <!-- <span>[[app.gameManager.CANVAS_SIZE_X]]</span> -->
         </div>
       </div>
@@ -214,7 +220,7 @@
         this.app._catalog = [];
         // this.app.controller = {};
 
-        // this.app.controller.isRunning = true;
+        // this.app.controller.isPlaying = true;
         // this.app.controller.refreshRate = 30;
 
         // this.push('app.saves', {
@@ -239,7 +245,8 @@
         }
 
         if(this.params.data){
-          var lifeCanvas = document.querySelector('life-canvas')
+          // var lifeCanvas = document.querySelector('life-canvas')
+          var lifeCanvas = this.$.mainCanvas;
           lifeCanvas.clearCanvas();
           lifeCanvas.injectPattern(0, 0, this.params.data);
         }
@@ -247,21 +254,22 @@
 
       _startPlaying: function(){
         this.$.togglecontroller.textContent = "Pause";
-        this.app.controller.isRunning = true;
+        this.set('app.controller.isPlaying', true);
       },
       _stopPlaying: function(){
         this.$.togglecontroller.textContent = "Resume";
-        this.app.controller.isRunning = false;
+        this.set('app.controller.isPlaying', false);
       },
       _isPlaying: function(){
-        return this.app.controller.isRunning;
+        return this.get('app.controller.isPlaying');
       },
       _togglePlaying: function(){
         this._isPlaying() ? this._stopPlaying() : this._startPlaying();
       },
 
       handleClear: function(e, datail) {
-        document.querySelector('life-canvas').clearCanvas();
+        // document.querySelector('life-canvas').clearCanvas();
+        this.$.mainCanvas.clearCanvas();
       },
 
       // handleItemChange: function(e){
@@ -321,32 +329,35 @@
         this.notifyPath('app._catalog');
 
         // this.app._selectedPattern = {};
-        this.app._selectedPattern = this.app._catalog[0];
+        // this.app._selectedPattern = this.app._catalog[0];
+        this.set('app._selectedPattern', this.app._catalog[0]);
       },
 
-      handleCanvasResize: function(){
-        // if(this.app.gameManager.CANVAS_SIZE_X > 3000){
-        //   this.app.gameManager.CANVAS_SIZE_X = 3000;
-        //   this.notifyPath('app.gameManager.CANVAS_SIZE_X');
-        // }
-        // if(this.app.gameManager.CANVAS_SIZE_Y > 3000){
-        //   this.app.gameManager.CANVAS_SIZE_Y = 3000;
-        //   this.notifyPath('app.gameManager.CANVAS_SIZE_Y');
-        // // }
-        this._stopPlaying();
-        document.querySelector('life-canvas').initialize();
-      },
-
-      handleCellResize: function(){
-        document.querySelector('life-canvas').resizeCanvas();
-      },
+      // handleCanvasResize: function(){
+      //   // if(this.app.gameManager.CANVAS_SIZE_X > 3000){
+      //   //   this.app.gameManager.CANVAS_SIZE_X = 3000;
+      //   //   this.notifyPath('app.gameManager.CANVAS_SIZE_X');
+      //   // }
+      //   // if(this.app.gameManager.CANVAS_SIZE_Y > 3000){
+      //   //   this.app.gameManager.CANVAS_SIZE_Y = 3000;
+      //   //   this.notifyPath('app.gameManager.CANVAS_SIZE_Y');
+      //   // // }
+      //   this._stopPlaying();
+      //   document.querySelector('life-canvas').initialize();
+      // },
+      //
+      // handleCellResize: function(){
+      //   document.querySelector('life-canvas').resizeCanvas();
+      // },
 
       _handleCreateNewSave: function(){
         // console.log("handle!");
 
-        var lifeCanvas = document.querySelector('life-canvas');
+        // var lifeCanvas = document.querySelector('life-canvas');
+        var lifeCanvas = this.$.mainCanvas;
 
-        var rle = lifeCanvas._encodeRLE();
+        // var rle = lifeCanvas._encodeRLE();
+        var rle = lifeCanvas.getRLE();
         var dataUrl = lifeCanvas.getCanvasDataURL();
 
         var date = new Date();
@@ -366,7 +377,8 @@
         this.app._selectedSave = e.model.get('item');
       },
       _handlePatternListTap: function(e){
-        this.app._selectedPattern = e.model.get('item');
+        // this.app._selectedPattern = e.model.get('item');
+        this.set('app._selectedPattern', e.model.get('item'));
       },
       _handleInfoViewForSave: function(e){
         // console.log(this._selectedSavesIndex);
