--- a/src/life-canvas/life-canvas.html
+++ b/src/life-canvas/life-canvas.html
@@ -6,7 +6,7 @@
 <dom-module id="life-canvas">
   <template>
     <!-- <canvas width$="[[app.gameManager.CANVAS_SIZE_X]]" height$="[[app.gameManager.CANVAS_SIZE_Y]]" id="canvas">Your browser doesn't support html5 canvas.</canvas> -->
-    <life-canvas-base id="canvas" is-playing="{{app.controller.isPlaying}}" refresh-rate="[[app.controller.refreshRate]]" width="[[app.width]]" height="[[app.height]]" cell-size="[[app.cellSize]]" mode="cell" on-game-loop-end="_drawPreview"></life-canvas-base>
+    <life-canvas-base id="canvas" is-playing="{{app.controller.isPlaying}}" refresh-rate="[[app.controller.refreshRate]]" width="[[app.width]]" height="[[app.height]]" cell-size="[[app.cellSize]]" mode="cell" on-game-loop-end="_drawPreview" background="[[app.backgroundImage]]"></life-canvas-base>
   </template>
 
   <script>
@@ -124,27 +124,27 @@
         this.$.canvas.clearCanvas();
       },
 
-      setColors: function(){
-        var gm = this.$.canvas._gameManager;
-        console.log(gm);
-        if(this.app._colors.width < gm.CELL_WIDTH || this.app._colors.height < gm.CELL_HEIGHT){
-          console.log("error!!");
-          return;
-        }
-
-        for(var i = 0; i < gm.CELL_HEIGHT; i++){
-          for(var j = 0; j < gm.CELL_WIDTH; j++){
-            gm.getCellAt(j, i).color = this.app._colors.payload[i][j];
-            gm.getCellAt(j, i).state = 1;
-          }
-        }
-        gm.draw();
-
-        console.log("done!");
-
-
-
-      },
+      // setColors: function(){
+      //   var gm = this.$.canvas._gameManager;
+      //   console.log(gm);
+      //   if(this.app._colors.width < gm.CELL_WIDTH || this.app._colors.height < gm.CELL_HEIGHT){
+      //     console.log("error!!");
+      //     return;
+      //   }
+      //
+      //   for(var i = 0; i < gm.CELL_HEIGHT; i++){
+      //     for(var j = 0; j < gm.CELL_WIDTH; j++){
+      //       gm.getCellAt(j, i).color = this.app._colors.payload[i][j];
+      //       gm.getCellAt(j, i).state = 1;
+      //     }
+      //   }
+      //   gm.draw();
+      //
+      //   console.log("done!");
+      //
+      //
+      //
+      // },
 
     });
   </script>
