--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -26,6 +26,7 @@
 
 <link rel="import" href="../life-icon-toggle/life-icon-toggle.html">
 <link rel="import" href="../life-save-dialog/life-save-dialog.html">
+<link rel="import" href="../life-settings-dialog/life-settings-dialog.html">
 <link rel="import" href="../life-brush-editor/life-brush-editor.html">
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
 <link rel="import" href="../life-canvas/life-canvas.html">
@@ -121,6 +122,7 @@
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div main-title>Game of Life</div>
+            <paper-icon-button icon="settings" onclick="document.getElementById('settingsDialog').open();"></paper-icon-button>
             <paper-icon-button icon="star" onclick="document.getElementById('endDrawer').toggle();"></paper-icon-button>
           </app-toolbar>
         </app-header>
@@ -132,12 +134,13 @@
         <div>
           <!-- <life-save-dialog id="infoViewDialog" title="{{app._selectedSave.name}}" image-src="[[app._selectedSave.dataUrl]]" share-url="[[app._selectedSave.shareUrl]]" on-title-change="_handleTitleChange"></life-save-dialog> -->
           <life-save-dialog id="infoViewDialog" target="{{app._selectedSave}}" on-title-change="_handleTitleChange"></life-save-dialog>
+          <life-settings-dialog id="settingsDialog" app="{{app}}"></life-settings-dialog>
           <life-canvas id="mainCanvas" app="{{app}}"></life-canvas>
           <!-- <life-preview-canvas width="240" height="240" auto-play rle="2o3b2o4b2o4b2o3b2o3bo7b2ob$obo2bobo3bo6bo5bo3bo5bo2bo$bo6bo4bo4b2o2b2o5bo5bo2b$14bo15bo7b$31bo!"></life-preview-canvas>
           <life-preview-canvas width="240" height="240" auto-play rle="18bo8b$17b3o7b$12b3o4b2o6b$11bo2b3o2bob2o4b$10bo3bobo2bobo5b$10bo4bobobobob2o2b$12bo4bobo3b2o2b$4o5bobo4bo3bob3o2b$o3b2obob3ob2o9b2ob$o5b2o5bo13b$bo2b2obo2bo2bob2o10b$7bobobobobobo5b4o$bo2b2obo2bo2bo2b2obob2o3bo$o5b2o3bobobo3b2o5bo$o3b2obob2o2bo2bo2bob2o2bob$4o5bobobobobobo7b$10b2obo2bo2bob2o2bob$13bo5b2o5bo$b2o9b2ob3obob2o3bo$2b3obo3bo4bobo5b4o$2b2o3bobo4bo12b$2b2obobobobo4bo10b$5bobo2bobo3bo10b$4b2obo2b3o2bo11b$6b2o4b3o12b$7b3o17b$8bo!"></life-preview-canvas>
           <life-preview-canvas width="240" height="240" auto-play rle="15b2o3b2o15b3$6b2o21b2o6b$6b2o21b2o6b2$3b2o27b2o3b$3b2o9b2o5b2o9b2o3b$9b3ob2o7b2ob3o9b$8bobo15bobo8b$8b2o17b2o8b$8bo19bo8b2$8bo19bo8b$7b2o19b2o7b$o6bo21bo6bo$o35bo4$o35bo$o6bo21bo6bo$7b2o19b2o7b$8bo19bo8b2$8bo19bo8b$8b2o17b2o8b$8bobo15bobo8b$9b3ob2o7b2ob3o9b$3b2o9b2o5b2o9b2o3b$3b2o27b2o3b2$6b2o21b2o6b$6b2o21b2o6b3$15b2o3b2o!"></life-preview-canvas> -->
 
-          <life-brush-editor rle="[[app._selectedPattern.payload]]" app="{{app}}"></life-brush-editor>
+          <!-- <life-brush-editor rle="[[app._selectedPattern.payload]]" app="{{app}}"></life-brush-editor> -->
 
           <nav>
             <paper-button id="togglecontroller" on-tap="_togglePlaying" toggles style="float: left;">Pause</paper-button>
