--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -154,9 +154,9 @@
           <paper-input label="Cell height" value="{{app.height}}" type="number" max="3000" style="float:left; width: 45%; max-width: 400px;"></paper-input>
           <paper-input label="Cell size" value="{{app.cellSize}}" type="number" min="1" max="10" style="float:left; width: 45%; max-width: 400px;"></paper-input>
         </div>
-        <div>
+        <!-- <div>
           <life-input-image app="{{app}}"></life-input-image>
-        </div>
+        </div> -->
       </div>
 
 
