improve settings dialog

--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -149,11 +149,12 @@
             <paper-button id="clearcontroller" on-tap="handleClear" toggles style="float: left;">Clear</paper-button>
           </nav>
         </div>
-        <div style="clear: both;">
+        <!-- <div style="clear: both;">
           <paper-input label="Cell width" value="{{app.width}}" type="number" max="3000" style="float:left; width: 45%; max-width: 400px; margin-right: 8px;"></paper-input>
           <paper-input label="Cell height" value="{{app.height}}" type="number" max="3000" style="float:left; width: 45%; max-width: 400px;"></paper-input>
           <paper-input label="Cell size" value="{{app.cellSize}}" type="number" min="1" max="10" style="float:left; width: 45%; max-width: 400px;"></paper-input>
-        </div>
+        </div> -->
+
         <!-- <div>
           <life-input-image app="{{app}}"></life-input-image>
         </div> -->
