--- a/src/life-settings-dialog/life-settings-dialog.html
+++ b/src/life-settings-dialog/life-settings-dialog.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
@@ -12,23 +13,33 @@
       <!-- <paper-toolbar>
         <div>Settings</div>
       </paper-toolbar> -->
+
       <h2>Settings</h2>
+      <paper-dialog-scrollable>
+        <h3>Canvas Size</h3>
+        <paper-input label="Cell width" value="{{app.width}}" type="number" max="3000"></paper-input>
+        <paper-input label="Cell height" value="{{app.height}}" type="number" max="3000"></paper-input>
+        <paper-input label="Cell size" value="{{app.cellSize}}" type="number" min="1" max="10"></paper-input>
 
-      <h3>Cell Color</h3>
-      <!-- <div>R</div> -->
-      <paper-slider class="red" value="{{cellRed}}" max="255" editable></paper-slider>
-      <!-- <div>G</div> -->
-      <paper-slider class="green" value="{{cellGreen}}" max="255" editable></paper-slider>
-      <!-- <div>B</div> -->
-      <paper-slider class="blue" value="{{cellBlue}}" max="255" editable></paper-slider>
+        <h3>Cell Color</h3>
+        <!-- <div>R</div> -->
+        <paper-slider class="red" value="{{cellRed}}" max="255" editable></paper-slider>
+        <!-- <div>G</div> -->
+        <paper-slider class="green" value="{{cellGreen}}" max="255" editable></paper-slider>
+        <!-- <div>B</div> -->
+        <paper-slider class="blue" value="{{cellBlue}}" max="255" editable></paper-slider>
 
-      <h3>Background Color</h3>
-      <!-- <div>R</div> -->
-      <paper-slider class="red" value="{{bgRed}}" max="255" editable></paper-slider>
-      <!-- <div>G</div> -->
-      <paper-slider class="green" value="{{bgGreen}}" max="255" editable></paper-slider>
-      <!-- <div>B</div> -->
-      <paper-slider class="blue" value="{{bgBlue}}" max="255" editable></paper-slider>
+        <h3>Background Color</h3>
+        <!-- <div>R</div> -->
+        <paper-slider class="red" value="{{bgRed}}" max="255" editable></paper-slider>
+        <!-- <div>G</div> -->
+        <paper-slider class="green" value="{{bgGreen}}" max="255" editable></paper-slider>
+        <!-- <div>B</div> -->
+        <paper-slider class="blue" value="{{bgBlue}}" max="255" editable></paper-slider>
+      </paper-dialog-scrollable>
+      <div class="buttons">
+        <paper-button dialog-confirm autofocus>OK</paper-button>
+      </div>
     </paper-dialog>
   </template>
 
