--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -195,7 +195,7 @@
       properties: {
         app: {
           type: Object,
-          value: {}
+          // value: {}
         },
         params: {
           type: Object,
