--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Game of Life</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="http://localhost:8080/life2" target="_blank">
     <link rel="manifest" href="manifest.json">
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="src/app-shell/app-shell.html">
