--- a/src/life-patterns/life-patterns.html
+++ b/src/life-patterns/life-patterns.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/paper-card/paper-card.html">
-<link rel="import" href="../../bower_components/paper-item/paper-item.html">
+<!-- <link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html"> -->
+<link rel="import" href="../../bower_components/paper-styles/default-theme.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
 
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
 
@@ -8,29 +10,77 @@
 <dom-module id="life-patterns">
   <template>
     <template is="dom-repeat" items="[[catalogForPage]]">
-      <paper-card class="dark">
-        <div class="card-content">
-          <life-preview-canvas width="240" height="240" auto-play rle="[[item.payload]]"></life-preview-canvas>
+      <div class="card">
+        <life-preview-canvas width="240" height="240" auto-play rle="[[item.payload]]" pattern-width="[[item.meta.x]]" pattern-height="[[item.meta.y]]"></life-preview-canvas>
 
-          <div role="listbox">
-            <paper-item>[[item.name]]</paper-item>
-            <paper-item>[[item.author]]</paper-item>
-            <paper-item>[[item.comments]]</paper-item>
-            <paper-item>[[item.meta.rule]]</paper-item>
-            <paper-item>[[item.meta.x]]</paper-item>
-            <paper-item>[[item.meta.y]]</paper-item>
-          </div>
+        <!-- <div role="listbox">
+          <paper-item>[[item.name]]</paper-item>
+          <paper-item>[[item.author]]</paper-item>
+          <paper-item>[[item.comments]]</paper-item>
+          <paper-item>[[item.meta.rule]]</paper-item>
+          <paper-item>[[item.meta.x]]</paper-item>
+          <paper-item>[[item.meta.y]]</paper-item>
+        </div> -->
+        <div class="card-content">
+          <div class="title">[[item.name]]</div>
+          <div class="author">[[item.author]]</div>
+          <div class="comments">[[item.comments]]</div>
         </div>
-      </paper-card>
+      </div>
     </template>
   </template>
 
-  <style>
-    paper-card {
-     box-sizing: border-box;
-     margin: 4px;
-     flex: 0 0 auto;
-   }
+  <style include="paper-material">
+    :host{
+      display: -webkit-flex;
+      display: flex;
+      /*-webkit-flex-direction: column;
+      flex-direction: column;*/
+      -webkit-flex-wrap: wrap;
+      flex-wrap: wrap;
+      /*height: 220vw;*/
+    }
+    .card {
+      /*display: inline-block;*/
+      position: relative;
+      box-sizing: border-box;
+      background-color: var(--paper-card-background-color, --primary-background-color);
+      border-radius: 2px;
+      @apply(--paper-font-common-base);
+      @apply(--paper-card);
+      @apply(--shadow-elevation-2dp);
+
+      margin: 4px;
+      flex: 0 0 auto;
+      max-width: 240px;
+    }
+
+    .card life-preview-canvas {
+      display: block;
+      width: 100%;
+      pointer-events: none;
+      @apply(--paper-card-header-image);
+    }
+
+    .card .card-content{
+      padding: 16px;
+      position:relative;
+      @apply(--paper-card-content);
+    }
+    .card .card-content .title{
+      /*padding: 16px;*/
+      font-size: 24px;
+      font-weight: 400;
+      color: var(--paper-card-header-color, #000);
+      @apply(--paper-card-header-text);
+    }
+    .card .card-content .author{
+      color: var(--paper-grey-600);
+    }
+    .card .card-content .comments{
+      padding-top: 16px;
+      overflow-wrap: break-word;
+    }
   </style>
 
   <script>
@@ -50,7 +100,7 @@
         },
         perPage: {
           type: Number,
-          value: 10,
+          value: 12,
         },
         pageCount: {
           type: Number,
