--- a/src/life-preview-canvas/life-preview-canvas.html
+++ b/src/life-preview-canvas/life-preview-canvas.html
@@ -5,7 +5,7 @@
 <dom-module id="life-preview-canvas">
   <template>
     <!-- <canvas width$="[[width]]" height$="[[height]]">Your browser doesn't support html5 canvas.</canvas> -->
-    <life-canvas-base id="canvas" is-playing="[[autoPlay]]" width="[[width]]" height="[[height]]" mode="canvas" cell-size="2"></life-canvas-base>
+    <life-canvas-base id="canvas" is-playing="[[autoPlay]]" width="[[width]]" height="[[height]]" mode="canvas" cell-size="[[cellSize]]"></life-canvas-base>
   </template>
 
   <style>
@@ -32,17 +32,55 @@
           type: Boolean,
           value: false
         },
+        patternWidth: {
+          type: Number,
+          value: 20
+        },
+        patternHeight: {
+          type: Number,
+          value: 20
+        },
+        cellSize: {
+          type: Number,
+          value: 2,
+          computed: '_computeCellSize(patternWidth, patternHeight)'
+        }
       },
 
       ready: function(){
-        this._rleChanged;
+        this._computeCellSize(this.patternWidth, this.patternHeight);
+      },
+
+      _computeCellSize: function(patternWidth, patternHeight){
+        var cellSize = 1;
+        if(patternWidth > this.width || patternHeight > this.height){
+          cellSize = 1;
+        }
+        else{
+          // console.log(Math.max(Math.floor(this.width / (patternWidth * 1.4)), Math.floor(this.height / (patternHeight * 1.4)), 1));
+
+          var _cellSize = Math.min(Math.floor(this.width / (patternWidth * 1.4)), Math.floor(this.height / (patternHeight * 1.4)));
+          cellSize = [1, _cellSize, 8].sort(function(a, b){ return a-b;})[1];
+          // cellSize = Math.max(Math.floor(this.width / (patternWidth * 1.4)), Math.floor(this.height / (patternHeight * 1.4)), 1);
+        }
+
+        // console.log(cellSize);
+
+        this._rleChanged();
+        return cellSize;
       },
 
       _rleChanged: function(){
         var canvas = this.$.canvas;
         // var canvas = document.querySelector('life-canvas-base');
         canvas.clearCanvas();
-        canvas.injectPattern(2, 2, this.rle);
+        // canvas.injectPattern(2, 2, this.rle);
+
+        if(!this.width || !this.height || !this.patternWidth || !this.patternHeight) return;
+        var x = Math.floor((this.width / this.cellSize) / 2 - this.patternWidth / 2);
+        var y = Math.floor((this.height / this.cellSize) / 2 - this.patternHeight / 2);
+        console.log("width: " + this.patternWidth + "; height: " + this.patternHeight + ";x: " + x + "; y: " + y);
+        canvas.injectPattern(x, y, this.rle);
       }
 
 
